Fixed: Created another folder inside the images folder which have the name dragonheads, added the wood dragon head image inside the project under the folder dragonheads. I will add the take in the right dragon head later but right now it will be wood dragon. Fixed: Waterdragon.js: In my old component DropDownMenu.js I did display some images and I used the same pattern now but in the component WaterDragon.js. I import the dragon head image, return it in a div with the className dragonhead, inside it is a selfclosed img tag with a source, so that react know where the image can be found, and used the import Waterdragonhead so the same name is in the top and in the return section. Fixed: _mobile.scss: dragonhead: Took in flex, some padding top and inline block, dragonhead img: I made the image itself a special width and height to match my mockup, I wanted the image not to be repeated, and a cover, with 0 padding. stat paragraph: I made the width on the box little smaller to match the image and mockup more, parchment text: used font size to make the text smaller to be more fitable in mobile, title: Made the color on the text lightblue, used text align center to move the title text into the center, took font size 16px, so the text is little bigger than the normal text I had on the className parchment text, made the title bold. Summary: Added and displayed the dragon head, which is now right image size on mobile mode so it is now alike my mockup. Made all titles lightblue in text color.

--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -187,7 +187,7 @@ dragons--facts--container{
 
 .stat--paragraph{
   margin: auto;
-  width: 80%;
+  width: 70%;
   border: 1px solid #000;
   padding: 10px;
   text-align: left;
@@ -199,6 +199,7 @@ dragons--facts--container{
   width: 90%;
   padding: 10px;
   text-align: left;
+  font-size: 13px;
     
 }
 
@@ -265,6 +266,13 @@ dragons--facts--container{
     border-bottom: 10px;
 }
 
+.title{
+    color:#5facff;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+}
+
 .bold{
    font-weight: bold; 
     
@@ -306,4 +314,23 @@ nav{
      flex-direction: column;
     align-items: center;
     list-style: none;
+}
+
+
+.dragonhead{
+    display: flex;
+    display:inline-block;
+    padding-top: 70px;
+    
+    
+}
+
+.dragonhead img{
+      display: flex;
+    width: 260px;
+    height: 205px;
+    align-items: center;
+    background-repeat: no-repeat; 
+    background-size: cover;
+    padding: 0;
 }
